--- a/app/views/social/_facebook.html.haml
+++ b/app/views/social/_facebook.html.haml
@@ -1,8 +1,8 @@
 -# encoding: utf-8
 
 %meta{ property: 'og:type', content: 'website' }
-%meta{ property: 'og:site_name', content: site_name}
-%meta{ property: 'og:title', content: site_title}
+%meta{ property: 'og:site_name', content: meta_attr(site_name)}
+%meta{ property: 'og:title', content: meta_attr(site_title)}
 %meta{ property: 'og:url', content: current_url}
 %meta{ property: 'og:image', content: site_image_url}
-%meta{ property: 'og:description', content: description}
+%meta{ property: 'og:description', content: meta_attr(description)}
