--- a/app/views/social/_twitter.html.haml
+++ b/app/views/social/_twitter.html.haml
@@ -1,6 +1,6 @@
 %meta{name: 'twitter:card', content: 'summary'}
-%meta{name: 'twitter:site', content: site_name}
-%meta{name: 'twitter:title', content: site_title}
-%meta{name: 'twitter:description', content: description}
+%meta{name: 'twitter:site', content: meta_attr(site_name)}
+%meta{name: 'twitter:title', content: meta_attr(site_title)}
+%meta{name: 'twitter:description', content: meta_attr(description)}
 %meta{name: 'twitter:image', content: site_image_url}
 %meta{name: 'twitter:url', content: current_url}
