--- a/app/community_views/shared/_head.html.haml
+++ b/app/community_views/shared/_head.html.haml
@@ -6,10 +6,10 @@
   %title= title_tag
   %meta{:content => meta_description_content, :name => "description"}/
 
-  %meta{property: "og:title", content: title_tag}/
-  %meta{property: "og:site_name", content: current_instance.name}/
+  %meta{property: "og:title", content: meta_attr(title_tag)}/
+  %meta{property: "og:site_name", content: meta_attr(current_instance.name)}/
   %meta{property: "og:url", content: request.original_url}/
-  %meta{property: "og:description", content: meta_description_content}/
+  %meta{property: "og:description", content: meta_attr(meta_description_content)}/
   %meta{property: "og:image", content: meta_og_image_content}/
 
   %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
