--- a/app/views/shared/_og_meta.html.haml
+++ b/app/views/shared/_og_meta.html.haml
@@ -1,12 +1,12 @@
 - url ||= request.original_url
-%meta{property:"og:title", content: object.name }
-%meta{property:"og:description", content: sanitize(object.description) }
+%meta{property:"og:title", content: meta_attr(object.name) }
+%meta{property:"og:description", content: meta_attr(object.description) }
 %meta{property:"og:type", content: "place" }
 - if object.respond_to?(:latitude)
   %meta{property:"place:location:latitude", content: object.latitude }
   %meta{property:"place:location:longitude", content: object.longitude }
   %meta{property:"place:location:longitude", content: object.longitude }
-%meta{property:"og:site_name", content: platform_context.name }
+%meta{property:"og:site_name", content: meta_attr(platform_context.name) }
 %meta{property:"og:url", content: url }
 - if object.respond_to?(:photos_metadata)
   - if object.photos_metadata.try(:count).to_i > 0
