--- a/app/views/social/_gplus.html.haml
+++ b/app/views/social/_gplus.html.haml
@@ -1,3 +1,3 @@
-%meta{itemprop: 'name', content: site_name}
-%meta{itemprop: 'description', content: description}
+%meta{itemprop: 'name', content: meta_attr(site_name)}
+%meta{itemprop: 'description', content: meta_attr(description)}
 %meta{itemprop: 'image', content: site_image_url}
