--- a/app/community_views/dashboard/photos/_resize_form.html.haml
+++ b/app/community_views/dashboard/photos/_resize_form.html.haml
@@ -12,9 +12,5 @@
   .modal-footer
     = submit_tag "Process", class: "button-a"
 
-
-
   :javascript
-    $(function() {
-      $(document).trigger('init:photomanipulator.nearme', ['#crop-form', { aspectRatio: #{defined?(object.class::ASPECT_RATIO) ? (object.model.try(:owner_type) == 'Project' ? object.class::ASPECT_RATIO_PROJECT : object.class::ASPECT_RATIO) : object.model.send("#{object.mounted_as}_dimensions")[:width].to_f/object.model.send("#{object.mounted_as}_dimensions")[:height].to_f} }) }]);
-    });
+    $(document).trigger('init:photomanipulator.nearme', ['#crop-form', { aspectRatio: #{defined?(object.class::ASPECT_RATIO) ? (object.model.try(:owner_type) == 'Project' ? object.class::ASPECT_RATIO_PROJECT : object.class::ASPECT_RATIO) : object.model.send("#{object.mounted_as}_dimensions")[:width].to_f/object.model.send("#{object.mounted_as}_dimensions")[:height].to_f} }]);
