NM-4061 Intel intro video

--- a/app/frontend/stylesheets/community.scss
+++ b/app/frontend/stylesheets/community.scss
@@ -45,6 +45,9 @@
 @import "intel/modules/modal";
 @import "intel/modules/flash-messages";
 
+@import "intel/modules/intro-video";
+
+
 // Defaults
 @import "intel/defaults/buttons";
 @import "intel/defaults/helpers";
