NM-4061 Alt version for intel video

--- a/app/community_views/home/_home_not_signed_in.html.liquid
+++ b/app/community_views/home/_home_not_signed_in.html.liquid
@@ -5,6 +5,11 @@
     <p class="action"><a href="https://software.intel.com/registration/dev-mesh/" class="button-a large orange">{{ 'join_now' | translate }}</a></p>
   </div>
 </div>
+<div class="intro-video-alt">
+  <div class="intro-video-alt-wrapper">
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/W3d4gNLUJzE?rel=0" frameborder="0" allowfullscreen></iframe>
+  </div>
+</div>
 <div class="wrap-a">
   <div class="contain">
     <div class="header-a">
