Fix for video not closing correctly

--- a/app/community_views/home/_home_not_signed_in.html.liquid
+++ b/app/community_views/home/_home_not_signed_in.html.liquid
@@ -40,8 +40,10 @@
 </div>
 
 <div id="intro-video"{% if hide_intro_video %} class="inactive"{% endif %}>
+  <div class="intro-video-overlay"></div>
   <div class="intro-video-wrapper">
     <div id="intro-player"></div>
+    <button type="button" class="intro-video-close">Close</button>
   </div>
 </div>
 
