--- a/app/frontend/stylesheets/intel/modules/_intro-video.scss
+++ b/app/frontend/stylesheets/intel/modules/_intro-video.scss
@@ -19,15 +19,15 @@
         display: none;
     }
 
-    &:before {
+    .intro-video-overlay {
         position: fixed;
         left: 0;
         right: 0;
         top: 0;
         bottom: 0;
         z-index: 1110;
-        content: "";
         background: rgba(0,0,0,0.7);
+        margin: 0;
     }
 
     .intro-video-wrapper {
@@ -57,6 +57,13 @@
             height: 100%;
             margin: 0;
         }
+    }
+
+    .intro-video-close {
+        left: 50%;
+        position: absolute;
+        margin-top: 50px;
+        transform: translateX(-50%);
     }
 }
 
