NM-4015 Allow default option for time zone

--- a/app/views/instance_admin/settings/configuration/show.html.haml
+++ b/app/views/instance_admin/settings/configuration/show.html.haml
@@ -35,7 +35,7 @@
       .input-container.col-xs-6
         = f.input :custom_waiver_agreements, as: :boolean, inline_label: true
       .input-container.col-xs-6
-        = f.input :time_zone, input_html: { class: 'selectpicker', "data-live-search" => "true" }
+        = f.input :time_zone, input_html: { class: 'selectpicker', "data-live-search" => "true" }, include_blank: t('general.default')
 
   .content-container
     %h4
