NM-4032 Add WYSWIG to description field of ServiceType, ProductType and OfferType

--- a/app/new_ui_views/dashboard/company/offers/_offer_fields.html.haml
+++ b/app/new_ui_views/dashboard/company/offers/_offer_fields.html.haml
@@ -49,4 +49,4 @@
   - if custom_attribute_names.include?(field)
     = draw_attribute_for_form(@offer_type.custom_attributes.find_by(name: field), properties_form)
   -elsif f.object.attributes.include?(field)
-    = f.input field
+    = f.input field, {}.merge(cke_attrs(model, field))
