NM-2203 Fixed a few occurences of layout zooming

--- a/app/views/layouts/instance_admin.html.haml
+++ b/app/views/layouts/instance_admin.html.haml
@@ -4,7 +4,7 @@
     %title
       #{platform_context.name} - Marketplace Admin
     %meta{:'http-equiv' => "Content-type", :content=> "text/html;charset=UTF-8"}
-
+    %meta{:name => "viewport", :content => "width=980"}
     = csrf_meta_tag
     = render 'layouts/favicon'
     = stylesheet_link_tag 'instance_admin_vendor'
