--- a/app/frontend/stylesheets/instance_admin/_style.scss
+++ b/app/frontend/stylesheets/instance_admin/_style.scss
@@ -5,6 +5,8 @@ $color-brand: #1a7fbb;
 html body {
   background: #ebedef;
   overflow-x: hidden;
+    -webkit-text-size-adjust: 100%;
+        -ms-text-size-adjust: 100%;
 }
 
 .dropshadow {
