NM-2206 Long transactable names will not break navigation any more

--- a/app/frontend/stylesheets/components/_nav.scss
+++ b/app/frontend/stylesheets/components/_nav.scss
@@ -158,6 +158,7 @@
         }
 
         .truncate {
+          display: block;
           width: 200px;
           white-space: nowrap;
           overflow: hidden;
