--- a/app/views/post_action_mailer/list.html.liquid
+++ b/app/views/post_action_mailer/list.html.liquid
@@ -9,7 +9,26 @@
   <div class="column-right">
     <h3><a href="{{ listing.listing_url }}">{{ listing.name }}</a></h3>
     <p>{{ listing.description }}</p>
-    <p>{{ listing.availability }}</p>
+
+    <div class="availability-week-container">
+      {% for day in listing.available_days %}
+        <span class="day-of-week" {% if day[1] %}style="color: #000;"{% else %}style="color: #d2d2d2;"{% endif %}>{{ day[0] }}</span>
+      {% endfor %}
+    </div>
+    <div class="availability-detailed-container" style="margin-bottom: 20px;">
+      {% for day in listing.availability_by_days %}
+        <div class="day-of-week" style="float: left; width: 45px;">
+          {{ day[0] }}
+        </div>
+        <div class="times-in-day" style="float: left;">
+          {% for time in day[1] %}
+            <span style="display: block;">{{ time[2] }}</span>
+          {% endfor %}
+        </div>
+        <div style="clear:both;"></div>
+      {% endfor %}
+    </div>
+
     <p class="no-padding"><a class="btn" href="{{ listing.listing_url }}">See full listing</a></p>
   </div>
   <div style="clear: both;"></div>
