--- a/app/new_ui_views/layouts/dashboard.html.haml
+++ b/app/new_ui_views/layouts/dashboard.html.haml
@@ -12,7 +12,7 @@
     = stylesheet_link_tag 'new_ui'
     = render 'shared/head/fonts'
 
-    = render "dynamic_theme/new_ui"
+    = stylesheet_link_tag dynamic_theme_url('new_ui')
 
     / Prefetch
     = render 'layouts/content_holder_injector'
