--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,7 +44,7 @@
     = stylesheet_link_tag 'application'
     = render 'shared/head/fonts'
 
-    = render "dynamic_theme/application"
+    = stylesheet_link_tag dynamic_theme_url('application')
 
     = render 'shared/javascripts/header'
 
