--- a/app/views/layouts/blog.html.haml
+++ b/app/views/layouts/blog.html.haml
@@ -17,7 +17,7 @@
     = stylesheet_link_tag 'application'
     = render 'shared/head/fonts'
 
-    = render "dynamic_theme/application"
+    = stylesheet_link_tag dynamic_theme_url('application')
 
     = render 'shared/javascripts/header'
 
