NM-4081 See more links are now proper buttons instead of links

--- a/app/community_views/activity_feed/see_more.js.erb
+++ b/app/community_views/activity_feed/see_more.js.erb
@@ -10,7 +10,7 @@ $moreButton = $container.find(".more-a")
 
 <% if @collection.next_page %>
   $moreButton.show()
-  $moreButton.find('a').data('next-page', '<%= @collection.next_page %>')
+  $moreButton.find('button').data('next-page', '<%= @collection.next_page %>')
 <% elsif %>
   $moreButton.hide()
 <%  end %>
