--- a/app/community_views/shared/_activity_feed.html.haml
+++ b/app/community_views/shared/_activity_feed.html.haml
@@ -21,8 +21,13 @@
     = render partial: "shared/activity_status", collection: feed.events, as: :event, locals: { object: object }
 
   - if feed.has_next_page?
-    %p.more-a{:'data-see-more' => true}
-      = link_to t(:see_more), see_more_activity_feed_path(id: feed.owner_id, type: feed.owner_type), remote: true, data: { next_page: feed.events.next_page }
+    - if user_signed_in?
+      %p.more-a{ :'data-see-more' => true }
+        %button{ data: { url: see_more_activity_feed_path(id: feed.owner_id, type: feed.owner_type), next_page: feed.events.next_page } }
+          = t(:see_more)
+    - elsif
+      %p.more-a
+        = link_to t(:see_more), new_user_session_path
 
 - else
   %p= t("activity_feed.no_interactions_yet")
