--- a/app/community_views/shared/_listing_projects.html.haml
+++ b/app/community_views/shared/_listing_projects.html.haml
@@ -8,5 +8,10 @@
         = render 'shared/project', project: project
 
   / more
-  %p.more-a{:'data-see-more' => true, class: "#{projects.next_page ? '' : 'hide-initially'}"}
-    = link_to t(:see_more), see_more_route, remote: true, data: { next_page: projects.try(:next_page) }
+  - if user_signed_in?
+    %p.more-a{:'data-see-more' => true, class: "#{projects.next_page ? '' : 'hide-initially'}"}
+      %button{ data: { url: see_more_route, next_page: projects.next_page } }
+        = t(:see_more)
+  - elsif projects.next_page
+    %p.more-a
+      = link_to t(:see_more), new_user_session_path
