--- a/app/community_views/shared/_listing_topics.html.haml
+++ b/app/community_views/shared/_listing_topics.html.haml
@@ -9,5 +9,10 @@
         = render 'shared/topic', topic: topic
 
   /more
-  %p.more-a{:'data-see-more' => true, class: "#{topics.next_page ? '' : 'hide-initially'}"}
-    = link_to t(:see_more), see_more_following_topics_path(id: @user.id, type: @user.class.name), remote: true, data: { next_page: topics.next_page }
+  - if user_signed_in?
+    %p.more-a{:'data-see-more' => true, class: "#{topics.next_page ? '' : 'hide-initially'}"}
+      %button{ data: { url: see_more_following_topics_path(id: @user.id, type: @user.class.name), next_page: topics.next_page } }
+        = t(:see_more)
+  - elsif topics.next_page
+    %p.more-a
+      = link_to t(:see_more), new_user_session_path
