--- a/app/frontend/stylesheets/intel/modules/_common.scss
+++ b/app/frontend/stylesheets/intel/modules/_common.scss
@@ -45,9 +45,21 @@
     margin: 60px 0;
     padding: 60px 0 0;
     border-top: 3px solid #f3f3f3;
-    font-size: 18px;
-    font-weight: bold;
     text-align: center;
+
+    button {
+        font-size: 18px;
+        font-weight: bold;
+        color: #0071c5;
+        background: none;
+        border: none;
+        padding: 0;
+
+        &:hover, &:focus, &:active {
+            color: #00aeef;
+            background: none;
+        }
+    }
 }
 
 .box-a > .more-a:last-child {
