NM-4022 On disabled switches cursor will be changed to not-allowed action

--- a/app/frontend/stylesheets/new_ui/forms/_switch.scss
+++ b/app/frontend/stylesheets/new_ui/forms/_switch.scss
@@ -62,6 +62,11 @@ $switch-toggler-background: #fff;
         border-style: solid;
         border-color: $switch-border-color;
     }
+
+    &.disabled .onoffswitch-label {
+        cursor: not-allowed;
+    }
+
     .onoffswitch-inner {
         display: block;
         width: 200%;
