NM-3854 Add mobile number field to messsage box

--- a/app/frontend/stylesheets/application_vendor.scss
+++ b/app/frontend/stylesheets/application_vendor.scss
@@ -20,3 +20,4 @@
 @import "vendor/jstree_themes/apple/style";
 
 @import "dashboard/jquery_datepicker";
+@import "selectize/dist/css/selectize.bootstrap3";
